--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="stylesheet" href="./menu.css">
+        <link rel="stylesheet" href="./estilo.css">
     </head>
     <body>
         <header>
