--- a/menu.html
+++ b/menu.html
@@ -183,6 +183,9 @@
                 Logo no início do jogo irá aparecer um breve "Mini Filme" do Denis na escola, após isso o jogador terá que fazer a prova de recuperação final. 
                 </p>
             </section>
+            <object data="GDDcertodocerto.docx" type="application/docx">
+                <p>Seu navegador não tem um plugin pra PDF</p>
+            </object>    
         </main>
         <footer>
             <p>&copy; Grupo 3 </p>
