--- a/menu.html
+++ b/menu.html
@@ -183,7 +183,7 @@
                 Logo no início do jogo irá aparecer um breve "Mini Filme" do Denis na escola, após isso o jogador terá que fazer a prova de recuperação final. 
                 </p>
             </section>
-            <object data="GDDcertodocerto.docx" type="application/docx">
+            <object data="GDDcertodocerto.docx" type="application/pdf">
                 <p>Seu navegador não tem um plugin pra PDF</p>
             </object>    
         </main>
