--- a/menu.html
+++ b/menu.html
@@ -183,7 +183,7 @@
                 Logo no início do jogo irá aparecer um breve "Mini Filme" do Denis na escola, após isso o jogador terá que fazer a prova de recuperação final. 
                 </p>
             </section>
-            <iframe src="http://devsa.info/GDDcertodocerto.pdf" width="600" height="780" style="border: none;"></iframe>
+            <embed src="http://menu.html//GDDcertodocerto.pdf" width="760" height="500" type='application/pdf'>
         </main>
         <footer>
             <p>&copy; Grupo 3 </p>
