--- a/menu.html
+++ b/menu.html
@@ -183,7 +183,9 @@
                 Logo no início do jogo irá aparecer um breve "Mini Filme" do Denis na escola, após isso o jogador terá que fazer a prova de recuperação final. 
                 </p>
             </section>
-            <embed src="http://menu.html//GDDcertodocerto.docx" width="760" height="500" type='application/docx'>
+            <section>
+                <iframe allowtransparency="true" width="485" height="402" src="https://scratch.mit.edu/projects/1059059013/embed?autostart=false" frameborder="0" allowfullscreen></iframe>
+            </section>
         </main>
         <footer>
             <p>&copy; Grupo 3 </p>
