--- a/menu.html
+++ b/menu.html
@@ -186,6 +186,9 @@
             <section>
                 <iframe allowtransparency="true" width="485" height="402" src="https://scratch.mit.edu/projects/1059059013/embed?autostart=false" frameborder="0" allowfullscreen></iframe>
             </section>
+             <section>
+                <iframe allowtransparency="true" width="485" height="402" src="file:///C:/Users/Aluno/Downloads/GDD-certo-do-certo.html" allowfullscreen></iframe>
+            </section>
         </main>
         <footer>
             <p>&copy; Grupo 3 </p>
